--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <link rel="stylesheet" href="./css/desktop.css" />
     <title>About</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p>reut</p>
+    </header>
+    <div class="reut"></div>
+  </body>
 </html>
