--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <p>Chairs</p>
               </div>
             </div>
-            <p><a href="#">See more</a></p>
+            <p><a href="#" class="see">See more</a></p>
           </div>
           <div class="card card2">
             <div class="card-head">
@@ -167,7 +167,7 @@
                   <p>Health and Beauty</p>
                 </div>
               </div>
-            <p><a href="#">See more</a></p>
+            <p><a href="#" class="see">See more</a></p>
           </div>
         
           <div class="card card3">
@@ -200,7 +200,7 @@
 
               </div>
 
-            <p><a href="#">See all deals</a></p>
+            <p><a href="#" class="see">See all deals</a></p>
 
           </div>
           
@@ -209,7 +209,7 @@
             <img src="./images/319IiCrzduL._AC_SY230_.jpg" alt="">
             <p><span class="red-bg">Up to 62% off</span> Limited time deal</p>
             <p>NIIMBOT Label Maker Machine</p>
-            <p><a href="#">See all deals</a></p>
+            <p><a href="#" class="see">See all deals</a></p>
           </div>
 
         </div>
