cards and fade fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           />
 
           <div class="flex column justify-content">
-            <p class="p-secondery">Deliver to</p>
+            <p class="p-secondary">Deliver to</p>
             <strong><p>Israel</p></strong>
           </div>
         </div>
@@ -51,7 +51,7 @@
           <select class="select" name="all">
             <option value="All">All</option>
           </select>
-          <input class="serch-input" type="text" placeholder="Search amazon" />
+          <input class="search-input" type="text" placeholder="Search amazon" />
           <div class="search-icon flex align-items">
             <i class="fas fa-search"></i>
           </div>
@@ -130,8 +130,8 @@
     <section class="hero1">
       <div class="inner-container">
         <div class="top-area">
-          <i class="fas fa-chevron-left chevron-left"></i>
-          <i class="fas fa-chevron-right chevron-right"></i>
+          <i class="fas fa-chevron-left chevron-left-light fa-2x"></i>
+          <i class="fas fa-chevron-right chevron-right fa-2x"></i>
         </div>
         <div class="cards-area">
           <div class="card card1">
@@ -141,29 +141,29 @@
             <div class="card-items">
               <div class="card-item">
                 <img
-                  src="./images/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg"
-                  alt=""
+                src="./images/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg"
+                alt=""
                 />
                 <p>Headsets</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg"
-                  alt=""
+                src="./images/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg"
+                alt=""
                 />
                 <p>Keyboards</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg"
-                  alt=""
+                src="./images/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg"
+                alt=""
                 />
                 <p>Computer mice</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg"
-                  alt=""
+                src="./images/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg"
+                alt=""
                 />
                 <p>Chairs</p>
               </div>
@@ -177,36 +177,36 @@
             <div class="card-items">
               <div class="card-item">
                 <img
-                  src="./images/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg"
-                  alt=""
+                src="./images/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg"
+                alt=""
                 />
                 <p>Dining</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg"
-                  alt=""
+                src="./images/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg"
+                alt=""
                 />
                 <p>Home</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg"
-                  alt=""
+                src="./images/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg"
+                alt=""
                 />
                 <p>Kitchen</p>
               </div>
               <div class="card-item">
                 <img
-                  src="./images/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg"
-                  alt=""
+                src="./images/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg"
+                alt=""
                 />
                 <p>Health and Beauty</p>
               </div>
             </div>
             <p><a href="#" class="see">See more</a></p>
           </div>
-
+          
           <div class="card card3">
             <div class="card-head">
               <h3>Home styling</h3>
@@ -258,6 +258,7 @@
           </div>
         </div>
       </div>
+      <div class="fade"></div>
     </section>
 
     <section class="line line1">
