--- a/index.html
+++ b/index.html
@@ -141,29 +141,29 @@
             <div class="card-items">
               <div class="card-item">
                 <img
-                src="./images/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg"
-                alt=""
+                  src="./images/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpg"
+                  alt=""
                 />
                 <p>Headsets</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg"
-                alt=""
+                  src="./images/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpg"
+                  alt=""
                 />
                 <p>Keyboards</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg"
-                alt=""
+                  src="./images/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpg"
+                  alt=""
                 />
                 <p>Computer mice</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg"
-                alt=""
+                  src="./images/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpg"
+                  alt=""
                 />
                 <p>Chairs</p>
               </div>
@@ -177,36 +177,36 @@
             <div class="card-items">
               <div class="card-item">
                 <img
-                src="./images/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg"
-                alt=""
+                  src="./images/DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg"
+                  alt=""
                 />
                 <p>Dining</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg"
-                alt=""
+                  src="./images/DesktopQuadCat_186x116_home_B08RCCP3HV_01.23._SY116_CB619238939_.jpg"
+                  alt=""
                 />
                 <p>Home</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg"
-                alt=""
+                  src="./images/DesktopQuadCat_186x116_kitchen_B0126LMDFK_01.23._SY116_CB619238939_.jpg"
+                  alt=""
                 />
                 <p>Kitchen</p>
               </div>
               <div class="card-item">
                 <img
-                src="./images/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg"
-                alt=""
+                  src="./images/DesktopQuadCat_186x116_health-beauty_B07662GN57_01.23._SY116_CB619238939_.jpg"
+                  alt=""
                 />
                 <p>Health and Beauty</p>
               </div>
             </div>
             <p><a href="#" class="see">See more</a></p>
           </div>
-          
+
           <div class="card card3">
             <div class="card-head">
               <h3>Home styling</h3>
@@ -295,5 +295,82 @@
         <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
       </div>
     </section>
+
+    <!-- footer -reut -->
+    <footer class="flex column">
+      <button class="back-to-top">Back to top</button>
+      <div class="footer-navbar-container flex column">
+        <div class="footer-navbar">
+          <section class="footer-navbar-section">
+            <p class="p-heading-nav-footer">Get to Know Us</p>
+            <p class="p-content-footer">Careers</p>
+            <p class="p-content-footer">Blog</p>
+            <p class="p-content-footer">About Amazon</p>
+            <p class="p-content-footer">Investor Relations</p>
+            <p class="p-content-footer">Amazon Devices</p>
+            <p class="p-content-footer">Amazon Science</p>
+          </section>
+
+          <section class="footer-navbar-section">
+            <p class="p-heading-nav-footer">Make Money with Us</p>
+            <p class="p-content-footer">Sell products on Amazon</p>
+            <p class="p-content-footer">Sell on Amazon Business</p>
+            <p class="p-content-footer">Sell apps on Amazon</p>
+            <p class="p-content-footer">Become an Affiliate</p>
+            <p class="p-content-footer">Advertise Your Products</p>
+            <p class="p-content-footer">Self-Publish with Us</p>
+            <p class="p-content-footer">Host an Amazon Hub</p>
+            <p class="p-content-footer">›See More Make Money with Us</p>
+          </section>
+
+          <section class="footer-navbar-section">
+            <p class="p-heading-nav-footer">Amazon Payment Products</p>
+            <p class="p-content-footer">Amazon Business Card</p>
+            <p class="p-content-footer">Shop with Points</p>
+            <p class="p-content-footer">Reload Your Balance</p>
+            <p class="p-content-footer">Amazon Currency Converter</p>
+          </section>
+
+          <section class="footer-navbar-section">
+            <p class="p-heading-nav-footer">Let Us Help You</p>
+            <p class="p-content-footer">Amazon and COVID-19</p>
+            <p class="p-content-footer">Your Account</p>
+            <p class="p-content-footer">Your Orders</p>
+            <p class="p-content-footer">Shipping Rates & Policies</p>
+            <p class="p-content-footer">Returns & Replacements</p>
+            <p class="p-content-footer">Manage Your Content and Devices</p>
+            <p class="p-content-footer">Amazon Assistant</p>
+            <p class="p-content-footer">Help</p>
+          </section>
+        </div>
+        <hr />
+        <div class="change-language-container">
+          <div class="change-language flex justify-content space-between">
+            <img
+              class="logo"
+              src="images/header_images/amazon-logo.png"
+              alt="amazon-logo"
+            />
+            <div class="change-language-item flex">
+              <i class="fas fa-globe"> </i>
+              <p class="p-content-footer">English</p>
+            </div>
+            <div class="change-language-item flex">
+              <p class="p-content-footer">
+                <strong> $</strong> USD - U.S Dollar
+              </p>
+            </div>
+            <div class="change-language-item flex">
+              <img
+                class="US-flug"
+                src="images/header_images/us-flag.png"
+                alt="US flag"
+              />
+              <p class="p-content-footer">United States</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
