--- a/index.html
+++ b/index.html
@@ -371,6 +371,201 @@
           </div>
         </div>
       </div>
+      <div class="last-footer-container">
+        <div class="amazon-links-footer">
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Music</p>
+              <p class="p-content-amazon-links-footer">
+                Stream millions of songs
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">AmazonGlobal</p>
+              <p class="p-content-amazon-links-footer">
+                Ship Orders Internationally
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">IMDbPro</p>
+              <p class="p-content-amazon-links-footer">Get Info</p>
+              <p class="p-content-amazon-links-footer">Entertainment</p>
+              <p class="p-content-amazon-links-footer">Professionals Need</p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Home Services</p>
+              <p class="p-content-amazon-links-footer">
+                Experienced Pros Happiness Guarantee
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">
+                Kindle Direct Publishing
+              </p>
+              <p class="p-content-amazon-links-footer">
+                Indie Digital & Print Publishing Made Easy
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">eero WiFi</p>
+              <p class="p-content-amazon-links-footer">
+                Stream 4K Video in Every Room
+              </p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Home Services</p>
+              <p class="p-content-amazon-links-footer">
+                Experienced Pros Happiness Guarantee
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">
+                Kindle Direct Publishing
+              </p>
+              <p class="p-content-amazon-links-footer">
+                Indie Digital & Print Publishing Made Easy
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">eero WiFi</p>
+              <p class="p-content-amazon-links-footer">
+                Stream 4K Video in Every Room
+              </p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Home Services</p>
+              <p class="p-content-amazon-links-footer">
+                Experienced Pros Happiness Guarantee
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">
+                Kindle Direct Publishing
+              </p>
+              <p class="p-content-amazon-links-footer">
+                Indie Digital & Print Publishing Made Easy
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">eero WiFi</p>
+              <p class="p-content-amazon-links-footer">
+                Stream 4K Video in Every Room
+              </p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Home Services</p>
+              <p class="p-content-amazon-links-footer">
+                Experienced Pros Happiness Guarantee
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">
+                Kindle Direct Publishing
+              </p>
+              <p class="p-content-amazon-links-footer">
+                Indie Digital & Print Publishing Made Easy
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">eero WiFi</p>
+              <p class="p-content-amazon-links-footer">
+                Stream 4K Video in Every Room
+              </p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Home Services</p>
+              <p class="p-content-amazon-links-footer">
+                Experienced Pros Happiness Guarantee
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">
+                Kindle Direct Publishing
+              </p>
+              <p class="p-content-amazon-links-footer">
+                Indie Digital & Print Publishing Made Easy
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">eero WiFi</p>
+              <p class="p-content-amazon-links-footer">
+                Stream 4K Video in Every Room
+              </p>
+            </div>
+          </div>
+          <div class="amazon-links-footer-container">
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Ads</p>
+              <p class="p-content-amazon-links-footer">
+                Reach customers wherever they spend their time
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Business</p>
+              <p class="p-content-amazon-links-footer">
+                Everything For Your Business
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">IMDb</p>
+              <p class="p-content-amazon-links-footer">
+                Movies, TV & Celebrities
+              </p>
+            </div>
+            <div class="amazon-links-footer-item flex column">
+              <p class="p-heading-amazon-links-footer">Amazon Business</p>
+              <p class="p-content-amazon-links-footer">
+                Everything For Your Business
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="p-heading-nav-footer flex justify-content">
+          © 1996-2024, Amazon.com, Inc. or its affiliates
+        </p>
+      </div>
     </footer>
   </body>
 </html>
