--- a/index.html
+++ b/index.html
@@ -262,37 +262,48 @@
     </section>
 
     <section class="line line1">
-      <h2>Best Sellers in Home & Kitchen</h2>
-      <div class="roller">
-        <img src="./images/line1/51-U5dEbEBL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/51lFr88wxML._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/61UFMf2FffL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/61ykNvz7iNL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/713afJ6oJ+L._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/717FfWa5e4L._AC_SY200_.jpg" alt="" />
-        <img src="./images/line1/71mL0rwKWNL._AC_SY200_.jpg" alt="" />
+      <div class="inner-line">
+        <h2>Best Sellers in Home & Kitchen</h2>
+        <div class="roller">
+          <img src="./images/line1/51-U5dEbEBL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/51lFr88wxML._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/61UFMf2FffL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/61ykNvz7iNL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/713afJ6oJ+L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/717FfWa5e4L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line1/71mL0rwKWNL._AC_SY200_.jpg" alt="" />
+        </div>
       </div>
     </section>
-    <br />
     <section class="line line2">
-      <h2>Popular products in PC internationally</h2>
-      <div class="roller">
-        <img src="./images/line2/51oXLC2JFHL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line2/51X92ABIuKL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line2/71u04dpUdoL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line2/71VXEYmRrZL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line2/81YY5q-fRYL._AC_SY200_.jpg" alt="" />
+      <div class="inner-line">
+        <h2>Popular products in PC internationally</h2>
+        <div class="roller">
+          <img src="./images/line2/51oXLC2JFHL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/51X92ABIuKL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/71u04dpUdoL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/71VXEYmRrZL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/81YY5q-fRYL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/81YY5q-fRYL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line2/81YY5q-fRYL._AC_SY200_.jpg" alt="" />
+        </div>
       </div>
     </section>
     <section class="line line3">
-      <h2>Most wished for in Movies & TV</h2>
-      <div class="roller">
-        <img src="./images/line3/71faTWApPcL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line3/71Groo63lJL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line3/71JNdvfxj5L._AC_SY200_.jpg" alt="" />
-        <img src="./images/line3/71Xs+ZVLEfL._AC_SY200_.jpg" alt="" />
-        <img src="./images/line3/71ZNyTPaV1L._AC_SY200_.jpg" alt="" />
-        <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+      <div class="inner-line">
+        <h2>Most wished for in Movies & TV</h2>
+        <div class="roller">
+          <img src="./images/line3/71faTWApPcL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/71Groo63lJL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/71JNdvfxj5L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/71Xs+ZVLEfL._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/71ZNyTPaV1L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+          <img src="./images/line3/81JeYtWAU2L._AC_SY200_.jpg" alt="" />
+        </div>
       </div>
     </section>
 
